<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/search_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start|center_vertical"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/search_icon"/>

                <EditText
                    android:id="@+id/search_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:textSize="17dp"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionDone"
                    android:hint="@string/search"/>

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/clear_search_input"
                    style="@style/clear_icon"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_300"/>

            <TextView
                android:id="@+id/num_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/gray_200"
                android:text="1 notifier"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_300"/>

        </LinearLayout>

        <ListView
            android:id="@+id/tasks_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_50"
            android:paddingBottom="87dp"
            android:clipToPadding="false"/>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:visibility="gone"
            android:padding="16dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_marginTopPercent="20%"
                android:gravity="center"
                android:text="@string/frown_icon"
                android:textSize="80sp"
                android:textColor="@color/gray_500"/>

            <TextView
                android:id="@+id/no_notifiers_text"
                android:layout_below="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_marginTopPercent="10%"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/gray_600"/>

            <TextView
                android:id="@+id/no_notifiers_subtext"
                android:layout_below="@+id/no_notifiers_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/no_tasks_subtext"
                android:textColor="@color/gray_600"/>
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin" />

</android.support.design.widget.CoordinatorLayout>
